// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpinionSource /> should render a li bordered 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion block--bordered bg-vip"
  id="source-1"
  listItem={false}
>
  <div
    className="opinion__body box"
  >
    <Connect(UserAvatar)
      className="pull-left"
      user={
        Object {
          "displayName": "author1",
          "id": "author1",
          "media": null,
          "url": "https://capco/dev/profile/author1",
          "vip": true,
        }
      }
    />
    <div
      className="opinion__data"
    >
      <OpinionInfos
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
        rankingThreshold={null}
      />
      <Relay(OpinionSourceTitle)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
      />
      <Relay(OpinionSourceContent)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": true,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
      />
      <div
        className="opinion__votes excerpt small"
      >
        <Relay(Connect(OpinionSourceButtons))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": true,
              },
              "createdAt": "",
              "id": "1",
              "updatedAt": null,
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </div>
  </div>
</ListGroupItem>
`;

exports[`<OpinionSource /> should render a white li if not vip 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="opinion block--bordered"
  id="source-1"
  listItem={false}
>
  <div
    className="opinion__body box"
  >
    <Connect(UserAvatar)
      className="pull-left"
      user={
        Object {
          "displayName": "author1",
          "id": "author1",
          "media": null,
          "url": "https://capco/dev/profile/author1",
          "vip": false,
        }
      }
    />
    <div
      className="opinion__data"
    >
      <OpinionInfos
        opinion={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
        rankingThreshold={null}
      />
      <Relay(OpinionSourceTitle)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
      />
      <Relay(OpinionSourceContent)
        source={
          Object {
            "$fragmentRefs": null,
            "$refType": null,
            "author": Object {
              "displayName": "author1",
              "id": "author1",
              "media": null,
              "url": "https://capco/dev/profile/author1",
              "vip": false,
            },
            "createdAt": "",
            "id": "1",
            "updatedAt": null,
          }
        }
      />
      <div
        className="opinion__votes excerpt small"
      >
        <Relay(Connect(OpinionSourceButtons))
          source={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "author": Object {
                "displayName": "author1",
                "id": "author1",
                "media": null,
                "url": "https://capco/dev/profile/author1",
                "vip": false,
              },
              "createdAt": "",
              "id": "1",
              "updatedAt": null,
            }
          }
          sourceable={
            Object {
              "$fragmentRefs": null,
              "$refType": null,
              "id": "sourceableId",
            }
          }
        />
      </div>
    </div>
  </div>
</ListGroupItem>
`;
